--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "normalize.css": "^7.0.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1"
   },
   "devDependencies": {},
   "scripts": {
