--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
     "css-loader": "^0.28.9",
     "node-sass": "^4.7.2",
     "normalize.css": "^7.0.0",
