--- a/package.json
+++ b/package.json
@@ -4,26 +4,28 @@
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
+    "babel": "^6.23.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^7.1.5",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.9",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.9.4",
     "normalize.css": "^7.0.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "react-redux": "^5.0.7",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "redux": "^4.0.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
-    "styled-components": "^3.2.6",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1"
+    "styled-components": "^4.0.2",
+    "webpack": "^4.23.1",
+    "webpack-dev-server": "^3.1.10"
   },
   "devDependencies": {
-    "babel-preset-env": "^1.7.0"
+    "babel-preset-env": "^1.7.0",
+    "webpack-cli": "^3.1.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
